--- a/telaOpcoes.html
+++ b/telaOpcoes.html
@@ -9,15 +9,36 @@
 <body>
     <section class="container">
         <section class="quadrados1"> 
-            <section class="quadrados_preto2">
-                <img class="imagens_cima" src="configuracoes.png" >
+
+            <section class="bloco_assistencia">
+
+                <section class="quadrados_preto2">
+                    <img class="imagens_configuracoes" src="configuracoes.png" >
+                </section>
+                <section class="texto_assistencia">
+                    <p>assistencia</p>
+                </section>
+                
             </section>
-            <section class="quadrados_preto3">
-                <img class="imagens_cima" src="agenda.png" >
+            
+            <section class="bloco_checklist">
+
+                <section class="quadrados_preto3">
+                    <img class="imagens_agenda" src="agenda.png" >
+                </section>
+                <section class="texto_checklist">
+                    <p>checklist</p>
+                </section>
+
             </section>
+
         </section>
+
         <section class="quadrado_administrador">
             <img class="imagem_administracao" src="administrador.png">
+        </section>
+        <section class="texto_administrador">
+            <p>administrador</p>
         </section>
     </section>
 </body>
