Reformulaçao do tamanho dos botoes
Consegui deixar os botoes do tamanho certo, aparentemente estou com dificuldades com o uso de varias "div" uma dentro da outra

--- a/TelaRegistro.html
+++ b/TelaRegistro.html
@@ -9,7 +9,7 @@
 <body>
     <section class="container">
 
-        <section>
+        <section class="h1">
             <h1>CHECKLIST</h1>
         </section>    
 
@@ -49,7 +49,7 @@
             <input id="observacoes" type="text" name="observacoes">
         </section>
 
-        <section>
+        <section class="classe_botao" >
             <button> Registrar Checklist </button>
         </section>
 
