Reformulando para deixar responsivo

--- a/cadastro.html
+++ b/cadastro.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <header> 
-            <h1 class="h1_cadastro"> Criar uma nova conta </h1>
+            <h1> Criar uma nova conta </h1>
         </header>
-        <section>
+        <section class="paragrafos">
             <p> Realize seu cadastro </p>
         </section>
         <section>
@@ -23,11 +23,11 @@
                 <input class="input_email" type="text" name="email_telefone">
             </section>
         </section>
-        <section>
+        <section class="bloco_data">
             <label class="label_data_de_nascimento" for="Data" > Data de nascimento </label>
             <input class="input_data" id="Data" type="date" name="data_nascimento">
         </section>
-        <section>
+        <section class="paragrafos">
             <p> Criar login </p>
         </section>
         <section class="select_3input">
